05_deployment_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wingetty
  namespace: __NAMESPACE__
  labels:
    app: wingetty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wingetty
  template:
    metadata:
      labels:
        app: wingetty
    spec:
      containers:
      - name: wingetty
        image: ghcr.io/thilojaeggi/wingetty:stable
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data-instance
          mountPath: /app/instance
        - name: data-package
          mountPath: /app/app/packages
      volumes:
      - name: data-instance
        persistentVolumeClaim:
          claimName: data-instance-pvc
      - name: data-package
        persistentVolumeClaim:
          claimName: data-package-pvc
